    XML chunks plus converts N whitespace to 1 space.
 * Used this to tidy up citations.
 * Used this in RSS and ATOM feeds
 * Renamed feed exports to Feed: foo

2006-11-17 moj
 * Added export plugin for RSS 2.0
 
2006-11-17 cjg
 * Added Thumbnails convert plugin
 * Added thumbnails directory for thumbnails
 * Rewrote fileicon code
 * fileinfo is now a core field
 * Added $doc->get_icon_url and $doc->render_icon_link
 * Added $session->get_full_url to get the, er, full url of the request.
 * Added New Version and Use as Template actions 
 * Fixed a bug in loggin of email messages
 * Added "Message" tab to eprint view
 * Fixed typo and modified lay-out in ImageMagick.pm
 * Changed "no reason given" to "no reason was given" - nicer.
 * Fixed bug with null emails in list_user_emails

2006-11-17 cjg
 * Added view-user-history screen.

2006-11-17 cjg
 * Added latitude and longitude fields to eprints and users.

2006-11-17 cjg
 * Added results citation for users which fixed a render bug.
 * Fixed bug in saved search xml export (from within user xml)

2006-11-17 cjg
 * Removed RequestWrapper
 * Fixed non-cookie login to use db authentication. maybe.
 * Moved DB login code to database, called nicely from 
    $session->valid_login( $user,$pass)

2006-11-17 cjg
 * Fixed bug in redirecting /perl/ if port!=80

2006-11-17 cjg
 * Tidied up field definitions for users & eprints

2006-11-17 cjg
 * XML::DOM no longer encodes " outside of attributes.

2006-11-20 cjg
 * Fixed rendering of language names
 * Added better error reporting if pins in a phrase are not DOM.
 * Started work on edit-subject but it's not really working yet.
 * Added removal request, including it creating a history event.
 * Removed some unused language code.
 * Removed some old cgi scripts.
 * Added a dark border to the mail textarea.

2006-11-20 cjg
 * Added warnings to deposit page.
 * No documents now causes a warning, even if it's legal.
