@@ -1,9 +1,14 @@
 
 
 
-function ep_autocompleter( element, target, url, basenames, width_of_these )
+function ep_autocompleter( element, target, url, basenames, width_of_these, fields_to_send )
 {
   new Ajax.Autocompleter( element, target, url, {
+    callback: function( el, entry ) { 
+      var params = fields_to_send.inject( entry, function( acc, rel_id, index ) { 
+        return acc + '&' + rel_id + '=' + $F(basenames.relative + rel_id); } );
+      return params;
+    },
     paramName: 'q',
     onShow: function(element, update){
       var w = width_of_these.inject( 0, function( acc, cell, index ) { 
@@ -23,13 +28,33 @@ function ep_autocompleter( element, target, url, basenames, width_of_these )
       lis.each( function(li) { 
         var myid = li.getAttribute( 'id' );
         var attr = myid.split( /:/ );
-        if( attr[0] != 'for' ) { return; }
-        if( attr[1] != 'value' ) { return; }
+        if( attr[0] != 'for' ) { alert( "Autocomplete id reference did not start with 'for': "+myid); return; }
+        if( attr[1] != 'value' &&  attr[1] != 'block' ) { alert( "Autocomplete id reference did not contain 'block' or 'value': "+myid); return; }
         var id = attr[3];
         var prefix = basenames[attr[2]];
-        var field = $(prefix+id);
-        if( !field ) { return; }
-        field.value = li.innerHTML;
+	if( prefix == null ) { prefix = ''; }
+        var target = $(prefix+id);
+        if( !target ) { return; }
+	if( attr[1] == 'value' )
+	{
+        	target.value = li.innerHTML;
+	}
+	else if( attr[1] == 'block' )
+	{
+		while( target.hasChildNodes() )
+		{
+			target.removeChild( target.firstChild );
+		}
+		while( li.hasChildNodes() )
+		{
+			target.appendChild( li.removeChild( li.firstChild ) );
+		}
+	}
+	else
+	{
+		alert( "1st part of autocomplete id ref was: "+attr[1] );
+	}
+
       } );
     }
   } );
